--- a/for.html
+++ b/for.html
@@ -4,6 +4,18 @@
 	<title>java script| for</title>
 </head>
 <body>
+<script type="text/javascript">
+	var jmlangkot = 10;
+	var angkotberoperasi = 6;
+	var noAngkot = 1;
 
+	while(noAngkot <= angkotberoperasi){
+		console.log('Angkot No. ' + noAngkot + ' beroperasi dengan baik');
+		noAngkot++;
+	}
+	for (noAngkot = angkotberoperasi + 1; noAngkot <= jmlangkot; noAngkot++) {
+	console.log('Angkot No. ' + noAngkot + ' sedang tidak beroperasi');
+}
+</script>
 </body>
 </html>
