--- a/pengkondisian.html
+++ b/pengkondisian.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>javascript|pengkondisisan</title>
+	<title>java script| for</title>
 </head>
 <body>
 <script type="text/javascript">
-		
+	var jmlanak = 10;
+	var anaklaki = 6;
+	
+	for(var Anak = 1; Anak <= jmlanak ; Anak++){
+
+		if (Anak <= 6) {
+			console.log('Anak Ke. ' + Anak + ' Ganteng-ganteng');
+		}else{
+			console.log('Anak Ke. ' + Anak + ' Cantik-cantik .');
+		}
+	}
+
 </script>
 </body>
 </html>
